<resources>
    <string name="app_name">GSYGithubAppKotlin</string>
    <string name="loading_prepare">看到了我吧!</string>
    <string name="loading_drop">放开我刷新!</string>
    <string name="loading_start">刷新中!</string>
    <string name="edit">编辑</string>
    <string name="open">打开</string>
    <string name="loading_end">刷新好了哟!</string>
    <string name="netError">网络错误</string>
    <string name="netTimeout">网络超时</string>
    <string name="unKnowError">未知异常</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="saveToLocal">保存到本地</string>
    <string name="saveSuccess">已保存到：</string>
    <string name="permission_storage_denied">获取本地读写权限失败</string>
    <string name="tabRecommended">推荐</string>
    <string name="tabDynamic">动态</string>
    <string name="tabMy">我的</string>
    <string name="setting">设置</string>
    <string name="secondAgo">秒前</string>
    <string name="daysAgo">天前</string>
    <string name="hoursAgo">小时前</string>
    <string name="minutesAgo">分钟前</string>
    <string name="justNow">刚刚</string>
    <string name="UserName">弃用，点击登陆授权</string>
    <string name="Password">弃用，点击登陆授权</string>
    <string name="Login">登陆</string>
    <string name="LoginTip">请直接点击登陆授权</string>
    <string name="LoginOAuth">授权登陆</string>
    <string name="LoginWithToken">使用 Token 登陆</string>
    <string name="LoginTokenDialogTitle">使用 Token 登陆</string>
    <string name="LoginTokenDialogDesc">粘贴 GitHub Personal Access Token，需勾选 repo / user / notifications 等权限。Token 仅保存在本机。</string>
    <string name="LoginTokenHint">ghp_xxxxxxxxxxxxxxxxxxxx</string>
    <string name="LoginTokenEmptyTip">Token 不能为空</string>
    <string name="LoginTokenHelpLink">如何创建 Token？</string>
    <string name="LoginTokenHelpUrl">https://github.com/settings/tokens/new?scopes=repo,user,notifications,gist&amp;description=GSYGithubAppKotlin</string>
    <string name="LoginTokenVisibilityToggle">显示或隐藏 Token</string>
    <string name="LoginOut">退出登陆</string>
    <string name="LoginNameTip">用户名不能为空</string>
    <string name="LoginPWTip">密码不能为空</string>
    <string name="LoginFailTip">登陆失败</string>
    <string name="refreshing">刷新中···</string>
    <string name="loadMoreing">正在加载更多···</string>
    <string name="loadMoreEnd">加载完了哟</string>
    <string name="loading">加载中···</string>
    <string name="doublePressExit">双击退出</string>
    <string name="userInfoNoting">Ta什么都没留下</string>
    <string name="staredText">星标</string>
    <string name="beStaredText">荣耀</string>
    <string name="FollowersText">粉丝</string>
    <string name="FollowedText">关注</string>
    <string name="repositoryText">仓库</string>
    <string name="personDynamic">个人动态</string>
    <string name="Member">组织成员</string>
    <string name="search">搜索</string>
    <string name="best_match">最匹配</string>
    <string name="stars">star</string>
    <string name="forks">forks</string>
    <string name="updated">更新</string>
    <string name="desc">倒叙</string>
    <string name="asc">正序</string>
    <string name="filerType">类型</string>
    <string name="filterSort">排序</string>
    <string name="filterLanguage">语言</string>
    <string name="filterAll">全部</string>
    <string name="Java">Java</string>
    <string name="Kotlin">Kotlin</string>
    <string name="Objective_C">Objective-C</string>
    <string name="Swift">Swift</string>
    <string name="JavaScript">JavaScript</string>
    <string name="PHP">PHP</string>
    <string name="Go">Go</string>
    <string name="C__">C++</string>
    <string name="C">C</string>
    <string name="HTML">HTML</string>
    <string name="CSS">CSS</string>
    <string name="unknown">unknown</string>
    <string name="created_at">创建于</string>
    <string name="forked_at">Forked from</string>
    <string name="latest_update">最后更新</string>
    <string name="latest_commit">最后提交</string>
    <string name="reposActivity">动态</string>
    <string name="reposPush">提交</string>
    <string name="reposReadme">详情信息</string>
    <string name="reposFile">文件</string>
    <string name="reposIssue">Issues</string>
    <string name="issueInfo">说明</string>
    <string name="issue">问题</string>
    <string name="issueComment">回复</string>
    <string name="issueCommentDelete">刪除回复</string>
    <string name="issueCommentEdit">编辑回复</string>
    <string name="issueTitleEmpty">标题不能为空</string>
    <string name="issueContentEmpty">内容不能为空</string>
    <string name="issueEdit">编辑</string>
    <string name="issueClose">关闭</string>
    <string name="issueOpen">打开</string>
    <string name="issueLocked">锁定</string>
    <string name="issueUnlock">解锁</string>
    <string name="issueInputTip">请输入答复哟</string>
    <string name="issueInputTipTitle">请输入标题</string>
    <string name="closeIssue">关闭？</string>
    <string name="openIssue">打开？</string>
    <string name="closeIssueTip">你确定要关闭这个Issue吗？</string>
    <string name="openIssueTip">你确定要打开这个Issue吗？</string>
    <string name="lockIssueTip">你确定要锁定这个Issue吗？</string>
    <string name="unLockIssueTip">你确定要解锁这个Issue吗？</string>
    <string name="commentsIssue">提交回复</string>
    <string name="editIssue">编辑</string>
    <string name="copyComment">复制</string>
    <string name="createIssue">创建</string>
    <string name="reposStar">Star</string>
    <string name="user100Honor">用户最近更新的前 100 个仓库 Star 总和</string>
    <string name="reposUnStar">UnStar</string>
    <string name="reposWatcher">Watcher</string>
    <string name="reposUnWatcher">UnWatcher</string>
    <string name="reposRelease">版本</string>
    <string name="reposFork">Fork</string>
    <string name="reposForked">你已经Fxxx过了(⊙o⊙)</string>
    <string name="reposForkedTip">你确定要Fxxx Ta吗?</string>
    <string name="reposTag">标记</string>
    <string name="notifyUnread">未读</string>
    <string name="notifyParticipating">参与</string>
    <string name="notifyAll">所有</string>
    <string name="notifyType">类型</string>
    <string name="notifyStatus">状态</string>
    <string name="unread">未读</string>
    <string name="readed">已读</string>
    <string name="notify">通知</string>
    <string name="fileNotSupport">预览文件失败，可能文件类型不支持预览。</string>
    <string name="searchRepos">仓库</string>
    <string name="searchUser">用户</string>
    <string name="issueAllText">全部</string>
    <string name="issueOpenText">打开</string>
    <string name="issueCloseText">关闭</string>
    <string name="issueYoursText">我的</string>
    <string name="hadCopy">已经复制到粘贴板</string>
    <string name="copyClone">复制克隆链接</string>
    <string name="filterCreated">创建</string>
    <string name="filterUpdated">更新</string>
    <string name="filterPushed">提交</string>
    <string name="filterFullName">名称</string>
    <string name="forkSuccess">Fxxx 成功了喔</string>
    <string name="forkFail">Fxxx 没能成功呢</string>
    <string name="listEmpty">暂时还没找到什么(oﾟ▽ﾟ)o </string>
    <string name="browserOpen">浏览器打开</string>
    <string name="noBrowserFound">未找到可用的浏览器，无法打开链接</string>
    <string name="copy">复制链接</string>
    <string name="download">下载</string>
    <string name="iosNotSupportDown">IOS不支持下载</string>
    <string name="downloadDescription">正在下载：</string>
    <string name="userCreate">创建于：</string>
    <string name="history">历史</string>
    <string name="about">应用关于</string>
    <string name="version">版本</string>
    <string name="author">作者</string>
    <string name="projectUrl">项目地址</string>
    <string name="feedback">用户反馈</string>
    <string name="person">个人信息</string>
    <string name="infoName">名字</string>
    <string name="infoEmail">邮箱</string>
    <string name="infoBlog">链接</string>
    <string name="infoCompany">公司</string>
    <string name="infoLocation">位置</string>
    <string name="infoBio">简介</string>
    <string name="unFollowed">取消关注</string>
    <string name="doFollowed">关注</string>
    <string name="register">Github注册</string>
    <string name="notFound">请求找不到地址啦·~</string>
    <string name="errorUnKnow">就是不知道是什么错误···</string>
    <string name="noPower">为啥你没有权限呢？</string>
    <string name="share">分享</string>
    <string name="newestVersion">当前是最新版本</string>
    <string name="beStared100Title"> 最受欢迎前100仓库</string>
    <string name="update">版本更新</string>
    <string name="weekClosed">本周关闭</string>
    <string name="weekOpened">本周打开</string>
    <string name="thisWeek"> 本周动态 </string>
    <string name="userOrg">组织</string>
    <string name="reloadClick">点击重新加载</string>
    <string name="language">语言</string>
    <string name="systemLanguage">系统</string>
    <string name="zhLanguage">中文</string>
    <string name="enLanguage">英文</string>
    <string name="gone410">410 Gone，不存在吧？</string>
    <string name="clearCache">清除缓存</string>
    <string name="listview_loading">加载中…</string>
    <string name="nomore_loading">没有更多了</string>

    <string name="error_401">[401错误可能: 未授权 \\ 授权登录失败 \\ 登录过期]</string>
    <string name="error_403">403没权限哦！</string>
    <string name="error_404">404没找到哦！</string>
    <string name="error_422">422异常，提交数据格式不对吧？</string>
    <string name="error_402">402请求参数异常</string>

    <array name="trend_since">
        <item>今日</item>
        <item>本周</item>
        <item>本月</item>
    </array>
    <array name="trend_since_data">
        <item>daily</item>
        <item>weekly</item>
        <item>monthly</item>
    </array>
    <array name="trend_language">
        <item>全部</item>
        <item>Java</item>
        <item>Kotlin</item>
        <item>Dart</item>
        <item>Objective-C</item>
        <item>Swift</item>
        <item>JavaScript</item>
        <item>PHP</item>
        <item>Go</item>
        <item>C++</item>
        <item>C</item>
        <item>HTML</item>
        <item>CSS</item>
    </array>
    <array name="trend_language_data">
        <item> </item>
        <item>Java</item>
        <item>Kotlin</item>
        <item>Dart</item>
        <item>Objective-C</item>
        <item>Swift</item>
        <item>JavaScript</item>
        <item>PHP</item>
        <item>Go</item>
        <item>C++</item>
        <item>C</item>
        <item>HTML</item>
        <item>CSS</item>
    </array>
</resources>
